<resources>
    <string name="app_name">Animation Overview</string>
    <string name="view_animation">View Animation</string>
    <string name="property_animation">Property Animation</string>
    <string name="layout_transitions">Layout Transitions</string>
    <string name="transitions_framework">Transitions Framework</string>
    <string name="activity_fragments_transitions">Activity/Fragment Transitions</string>

    <string name="play">Play</string>

    <string name="translate">Translate</string>
    <string name="rotate">Rotate</string>
    <string name="scale">Scale</string>
    <string name="alpha">Alpha</string>
    <string name="animation_set">Animation Set</string>

    <string name="translation_prop">Translation X/Y/Z</string>
    <string name="rotation_prop">Rotation X/Y</string>
    <string name="scale_prop">Scale X/Y</string>
    <string name="color_prop">Color</string>
    <string name="animator_set">Animator Set</string>

    <string name="add">Add view</string>
    <string name="remove">Remove view</string>
    <string name="set_transition">Set LayoutTransition (animateLayoutChanges=true)</string>
    <string name="enable_changes">Enable CHANGING transition</string>
    <string name="custom_animations">Custom animations</string>

    <string name="scene1">Scene 1</string>
    <string name="scene2">Scene 2</string>
    <string name="scene3">Scene 3</string>
    
    <string name="jelly_bean">Jelly Bean</string>
    <string name="kitkat">KitKat</string>
    <string name="lollipop">Lollipop</string>
    <string name="marshmallow">Marshmallow</string>

    <string name="jelly_bean_info">Google released Jelly Bean 4.3 under the slogan "An even sweeter Jelly Bean" on July 24, 2013, during an event in San Francisco called "Breakfast with Sundar Pichai". Most Nexus devices received the update within a week, although the second-generation Nexus 7 tablet was the first device to officially ship with it. A minor bugfix update was released on August 22, 2013.</string>
    <string name="kitkat_info">Google announced Android 4.4 KitKat on September 3, 2013. Although initially under the "Key Lime Pie" ("KLP") codename, the name was changed because "very few people actually know the taste of a key lime pie." Some technology bloggers also expected the "Key Lime Pie" release to be Android 5. KitKat debuted on Google\'s Nexus 5 on October 31, 2013, and was optimized to run on a greater range of devices than earlier Android versions, having 512 MB of RAM as a recommended minimum; those improvements were known as "Project Svelte" internally at Google. The required minimum amount of RAM available to Android is 340 MB, and all devices with less than 512 MB of RAM must report themselves as "low RAM" devices.</string>
    <string name="lollipop_info">Android 5.0 "Lollipop" was unveiled under the codename "Android L" on June 25, 2014, during Google I/O. It became available as official over-the-air (OTA) updates on November 12, 2014, for select devices that run distributions of Android serviced by Google, including Nexus and Google Play edition devices. Its source code was made available on November 3, 2014.
        Lollipop features a redesigned user interface built around a responsive design language referred to as "material design". Other changes include improvements to the notifications, which can be accessed from the lockscreen and displayed within applications as top-of-the-screen banners. Furthermore, Google made internal changes to the platform, with the Android Runtime (ART) officially replacing Dalvik for improved application performance, and with changes intended to improve and optimize battery usage, known internally as Project Volta.</string>
    <string name="marshmallow_info">Android 6.0 "Marshmallow" was unveiled under the codename "Android M" during Google I/O on May 28, 2015, for the Nexus 5 and Nexus 6 phones, Nexus 9 tablet, and Nexus Player set-top box, under the build number MPZ44Q. The third developer preview (MPA44G) was released on August 17, 2015 for the Nexus 5, Nexus 6, Nexus 9 and Nexus Player devices, and was updated to MPA44I that brought fixes related to Android for Work profiles.</string>

    <string name="text_transition_name">text</string>
    <string name="icon_transition_name">icon</string>
</resources>
