<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_area"
        android:minHeight="400dp">

        <ImageView
            android:id="@+id/animated_view"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_gravity="center"
            android:src="@drawable/android" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/translate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/translate" />

            <Button
                android:id="@+id/rotate_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rotate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/scale_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scale" />

            <Button
                android:id="@+id/alpha_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alpha" />

        </LinearLayout>

        <Button
            android:id="@+id/animation_set_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animation_set" />

    </LinearLayout>

</RelativeLayout>


