<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/animated_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_area">

        <ImageView
            android:id="@+id/animated_view"
            android:layout_width="156dp"
            android:layout_height="156dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/android" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/translation_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/translation_prop" />

            <Button
                android:id="@+id/rotation_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rotation_prop" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/scale_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scale_prop" />

            <Button
                android:id="@+id/color_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/color_prop" />

        </LinearLayout>

        <Button
            android:id="@+id/animator_set_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/animator_set" />

    </LinearLayout>

</RelativeLayout>


