<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_area">

        <LinearLayout
            android:id="@+id/view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <com.olecco.android.animationoverview.views.ColoredView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp" />

            <com.olecco.android.animationoverview.views.ColoredView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="4dp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/set_transition_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_transition" />

            <CheckBox
                android:id="@+id/enable_changing_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_changes" />

            <CheckBox
                android:id="@+id/custom_animations_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_animations" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add" />

            <Button
                android:id="@+id/remove_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remove" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>


