<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/details_header"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/details_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/marshmallow_back" />

            <FrameLayout
                android:id="@+id/details_header_text_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/text_transparent_background"
                android:minHeight="48dp"
                android:paddingBottom="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="120dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@android:id/text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/jelly_bean"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/end_text_size"
                    android:transitionName="@string/text_transition_name" />

            </FrameLayout>

            <ImageView
                android:id="@android:id/icon"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_alignParentBottom="true"
                android:layout_margin="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/kitkat"
                android:transitionName="@string/icon_transition_name" />

        </RelativeLayout>

        <TextView
            android:id="@android:id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp" />

    </LinearLayout>

</ScrollView>
